# factory

./: docker-compose.yml  factory.cabal  stack.yaml
docs/: index.html
docs/bower_components/mermaid/: .bower.json
docs/bower_components/reveal.js-menu/: .bower.json
