name: factory
version: 1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak <taylor@fausak.me>
synopsis: An example Servant API.
description:
    <https://github.com/tfausak/factory#readme>
category: Web
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/tfausak/factory

library
    exposed-modules:
        Factory
        Factory.API
        Factory.API.MIME
        Factory.Database
        Factory.Haskell
        Factory.JavaScript
        Factory.Markdown
        Factory.Server
        Factory.Swagger
        Factory.Types.Widget
    build-depends:aeson,
                  base,
                  bytestring,
                  either,
                  http-client,
                  http-media,
                  safe,
                  servant,
                  servant-client,
                  servant-docs,
                  servant-js,
                  servant-server,
                  servant-swagger,
                  stm,
                  swagger2,
                  text,
                  transformers,
                  wai,
                  warp
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

executable factory
    main-is: Main.hs
    build-depends:
                  base -any,
                  factory -any,
                  http-client,
                  swagger2
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

